--- a/styles.css
+++ b/styles.css
@@ -80,57 +80,11 @@ body {
     height: 100vh;
 }
 
-.navbar {
-    background-color: var(--background-300);
-    
-    grid-row: 1 / 4;
-    display: flex;
-    padding-top: 20px;
-    justify-content: center;
-    margin-right: 15px;
-    
-    
-}
 
-.navbar-nav {
-    height: 80%;
-    display: grid;
-    gap: 20px;
-}
-
-.nav-list{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 3px;
-    padding-right:5px;
-}
-
-.nav-list:hover, .nav-list svg:hover, .nav-list a:hover {
-    scale: 1.2;
-    color: var(--accent);
-    fill: var(--accent)
-}
-
-
-.nav-list svg {
-    height: 30px;
-    fill: var(--background);
-}
-
-.nav-list a {
-    color: var(--text);
-    list-style-type: none;
-    text-decoration: none;
-    color: var(--background);
-    padding-left: 10px;
-    
-}
 
 .header {
     
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -267,11 +221,20 @@ svg:hover {
     height: 20px;
 }
 
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .libraryContainer {
+    padding: 10px 0 0 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    width: 100vw;
+    grid-column: 1 / 3;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 0.5fr));
     gap: 30px;
+    justify-content: center;
 
 }
 
@@ -288,13 +251,7 @@ svg:hover {
     font-size: 1.2rem;
 }
 
-.side-bar {
-    grid-column: 3 / 4;
-    grid-row: 1 / 4;
-    display: grid;
-    grid-template-rows: 0.6fr 0.4fr;
-    gap: 10px;
-}
+
 
 .modal {
     text-align: center;
