--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,7 @@ main {
     display: grid;
     width: 100vw;
     grid-column: 1 / 3;
+    grid-row: 2 / 3;
     grid-template-columns: repeat(auto-fit, minmax(250px, 0.5fr));
     gap: 30px;
     justify-content: center;
